# manage-aws-ecr-repositories-lifecycle

./: .gitignore  README.md  ecr_lifecycle_manager.py  lifecycle.json  pyproject.toml  requirements.txt  setup.cfg
.github/: copilot-instructions.md
src/: __init__.py  ecr_manager.py  logger.py
tests/: test_ecr_manager.py  test_logger.py
